--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Provocare: Managerul Siturilor Arheologice</title>
+<title>Provocare "Green": Managerul Siturilor Arheologice</title>
 <style>
   /* ======= Stil general ======= */
   body {
